--- a/RealmTodo/RealmTodo.csproj
+++ b/RealmTodo/RealmTodo.csproj
@@ -57,7 +57,6 @@
 		<None Remove="atlasConfig.json" />
 	</ItemGroup>
 	<ItemGroup>
-		<Folder Include="Models\" />
 		<Folder Include="Services\" />
 	</ItemGroup>
 	<ItemGroup>
@@ -73,7 +72,7 @@
 			<SubType>
 			</SubType>
 		</MauiXaml>
-		<MauiXaml Update="Views\ItemsPage.xaml">
+		<MauiXaml Update="Views\ItemViews\ItemsPage.xaml">
 			<SubType>
 			</SubType>
 		</MauiXaml>
