added AddDog method
changes that I made in the project regrading Dog class:
1)I added Dong class to my project .
2)I also added in the EditItemViewModel.cs file the method AddDog .
3) In the EditItemPage.xaml insted to AddItemCommand I wrote the method AddDogCommand that should add Dog class to realm.

--- a/RealmTodo/atlasConfig.json
+++ b/RealmTodo/atlasConfig.json
@@ -1,5 +1,5 @@
 {
-  "appId": "testmongo-zbonydn",
+  "appId": "atlastest-qmfoisb",
   "baseUrl": "https://services.cloud.mongodb.com",
   "dataExplorerLink": "https://cloud.mongodb.com/links/app_id/explorer/cluster_name/database/collection/find"
 }
