can add Dog and Item object to mongodb
now this code can add Item object and Dog object by changing the inputObject type . need to keep working on the code ,

--- a/RealmTodo/RealmTodo.csproj
+++ b/RealmTodo/RealmTodo.csproj
@@ -60,6 +60,9 @@
 		<Folder Include="Services\" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Compile Update="Views\ItemViews\EditDogPage.xaml.cs">
+	    <DependentUpon>EditDogPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Views\TimerPage.xaml.cs">
 	    <DependentUpon>%(Filename)</DependentUpon>
 	  </Compile>
@@ -71,6 +74,9 @@
 	  </Compile>
 	</ItemGroup>
 	<ItemGroup>
+		<MauiXaml Update="Views\ItemViews\EditDogPage.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="Views\TimerPage.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
