--- a/RealmTodo/RealmTodo.csproj
+++ b/RealmTodo/RealmTodo.csproj
@@ -60,6 +60,9 @@
 		<Folder Include="Services\" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Compile Update="Views\ItemViews\EditMapPinPage.xaml.cs">
+	    <DependentUpon>EditMapPinPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Views\ItemViews\EditDogPage.xaml.cs">
 	    <DependentUpon>EditDogPage.xaml</DependentUpon>
 	  </Compile>
@@ -74,6 +77,9 @@
 	  </Compile>
 	</ItemGroup>
 	<ItemGroup>
+		<MauiXaml Update="Views\ItemViews\EditMapPinPage.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="Views\ItemViews\EditDogPage.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
