fixed to problem of getting list of diffrent objects
I fixed the problem of getting list of objects that is different from the starting object type .

--- a/RealmTodo/RealmTodo.csproj
+++ b/RealmTodo/RealmTodo.csproj
@@ -48,6 +48,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<None Remove="Models\" />
+		<None Remove="Resources\Images\refresh.svg" />
 		<None Remove="Views\" />
 		<None Remove="ViewModels\" />
 		<None Remove="CommunityToolkit.Mvvm" />
